Moved to Java 21 and updated libraries
Now based on Java 21 and JavaFX 21. Various libraries updated. Can now create archive and Windows installer distributions with create-dist.cmd script. Disabled menu items for THREDDS functionality that isn't yet implemented.